--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -120,8 +120,8 @@
                                 'Qty-to-Invoice_Base': Text(entry.'Qty-to-Invoice_Base'),
                                 Quantity: Text(entry.Quantity),
                                 Quantity_Base: Text(entry.Quantity_Base),
-                                Quantity_Completed: Text(entry.Quantity_Completed),
-                                Quantity_NewLOT: Text(entry.Quantity_NewLOT),
+                                Quantity_Completed: Value(entry.Quantity_Completed),
+                                Quantity_NewLOT: Value(entry.Quantity_NewLOT),
                                 Res_Status: Text(entry.Res_Status),
                                 Shipment_Date: Text(entry.Shipment_Date),
                                 Source_ID: Text(entry.Source_ID),
@@ -148,8 +148,8 @@
                             'Qty-to-Invoice_Base': Text(line.Res_Entry.'Qty-to-Invoice_Base'),
                             Quantity: Text(line.Res_Entry.Quantity),
                             Quantity_Base: Text(line.Res_Entry.Quantity_Base),
-                            Quantity_Completed: Text(line.Res_Entry.Quantity_Completed),
-                            Quantity_NewLOT: Text(line.Res_Entry.Quantity_NewLOT),
+                            Quantity_Completed: Value(line.Res_Entry.Quantity_Completed),
+                            Quantity_NewLOT: Value(line.Res_Entry.Quantity_NewLOT),
                             Res_Status: Text(line.Res_Entry.Res_Status),
                             Shipment_Date: Text(line.Res_Entry.Shipment_Date),
                             Source_ID: Text(line.Res_Entry.Source_ID),
@@ -196,8 +196,8 @@
                             'Qty-to-Invoice_Base': Text(entry.'Qty-to-Invoice_Base'),
                             Quantity: Text(entry.Quantity),
                             Quantity_Base: Text(entry.Quantity_Base),
-                            Quantity_Completed: Text(entry.Quantity_Completed),
-                            Quantity_NewLOT: Text(entry.Quantity_NewLOT),
+                            Quantity_Completed: Value(entry.Quantity_Completed),
+                            Quantity_NewLOT: Value(entry.Quantity_NewLOT),
                             Res_Status: Text(entry.Res_Status),
                             Shipment_Date: Text(entry.Shipment_Date),
                             Source_ID: Text(entry.Source_ID),
@@ -224,8 +224,8 @@
                         'Qty-to-Invoice_Base': Text(xmlData.Purchase_Line.Res_Entry.'Qty-to-Invoice_Base'),
                         Quantity: Text(xmlData.Purchase_Line.Res_Entry.Quantity),
                         Quantity_Base: Text(xmlData.Purchase_Line.Res_Entry.Quantity_Base),
-                        Quantity_Completed: Text(xmlData.Purchase_Line.Res_Entry.Quantity_Completed),
-                        Quantity_NewLOT: Text(xmlData.Purchase_Line.Res_Entry.Quantity_NewLOT),
+                        Quantity_Completed: Value(xmlData.Purchase_Line.Res_Entry.Quantity_Completed),
+                        Quantity_NewLOT: Value(xmlData.Purchase_Line.Res_Entry.Quantity_NewLOT),
                         Res_Status: Text(xmlData.Purchase_Line.Res_Entry.Res_Status),
                         Shipment_Date: Text(xmlData.Purchase_Line.Res_Entry.Shipment_Date),
                         Source_ID: Text(xmlData.Purchase_Line.Res_Entry.Source_ID),
