--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -374,6 +374,7 @@
             ZIndex: =4
 
     com_NabModal As com_Modal:
+        IsNabavniNalog: =true
         LineId: =com_NabGalleries.SelectedLine.Line_No
         Quantity: =com_NabGalleries.SelectedEntry.Quantity
         QuantityCompleted: =com_NabGalleries.SelectedEntry.Quantity_Completed
